Implement snapshot editing, garbage collect old images, infrastructure for Gravatar, integrate new layout more tightly, security fixes

--- a/app/views/snapshots/edit.html.erb
+++ b/app/views/snapshots/edit.html.erb
@@ -2,3 +2,27 @@
 
 <p>Edit this file in <tt>app/views/snapshots/edit.html.erb</tt></p>
 <p>For more information and examples of CRUD views read <a href="http://wiki.merbivore.com/howto/crud_view_example_with_merb_using_erb"> this wiki page</a>
+
+<div class="breadcrumbs">
+<%= link_to 'Whiteboards', resource(:whiteboards) %>
+<%= link_to @whiteboard.name, resource(@whiteboard) %>
+<%= link_to 'Snapshot', resource(@whiteboard, @snapshot) %>
+</div>
+
+<%= form_for (@snapshot, :action => resource(@whiteboard, @snapshot)) do %>
+  <!-- TODO: use date/time picker -->
+  <%= text_field :taken_at, :label => "Taken At" %>
+  
+  Current Image:
+  <%= image_tag @snapshot.image_url, :class => 'snapshotimage' %>
+  
+  <!-- TODO: use JS to enable/disable controls as appropriate -->
+  <%= radio_button :name => "image_source", :value => "original", :label => "Leave image unchanged", :checked => true %>
+  <%= radio_button :name => "image_source", :value => "upload", :label => "Upload new image" %>
+  <%= file_field :name => "image_upload", :label => "Image" %>
+  <%= radio_button :name => "image_source", :value => "url", :label => "Use image at url" %>
+  <%= text_field :name => "image_url", :label => "URL" %>
+  
+  <%= text_area :body, :label => "Body" %>
+  <%= submit "Update" %>
+<% end =%>
