--- a/app/views/layout/application.html.erb
+++ b/app/views/layout/application.html.erb
@@ -1,14 +1,24 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us" lang="en-us">
-  <head>
-    <title>Whiteboards</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen" charset="utf-8" />
-  </head>
-  <body>
+<!DOCTYPE html 
+     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <title>Boardlog. Welcome.</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <!-- TODO: remove this stylesheet when we have restyled the exception pages -->
+  <link rel='stylesheet' href='/stylesheets/merb.css' type='text/css' media="screen" charset="utf-8" />
+  <link rel='stylesheet' href='/stylesheets/main.css' type='text/css' media="screen" charset="utf-8" />
+</head>
+<body>
+  <div align='center' id='main_container'>
     <%#= message[:notice] %>
     <%= link_to 'Logout', '/logout' %>
-    
+
     <%= catch_content :for_layout %>
-  </body>
+
+    <div id='bottom_container' align='center'>
+    Max Bolingbroke and Dominic Orchard (2008).
+    </div>
+  </div>
+</body>
 </html>
