--- a/app/views/snapshots/show.html.erb
+++ b/app/views/snapshots/show.html.erb
@@ -3,4 +3,16 @@
 <p>Edit this file in <tt>app/views/snapshots/show.html.erb</tt></p>
 <p>For more information and examples of CRUD views read <a href="http://wiki.merbivore.com/howto/crud_view_example_with_merb_using_erb"> this wiki page</a>
 
+<div class="breadcrumbs">
+<%= link_to 'Whiteboards', resource(:whiteboards) %>
+<%= link_to @whiteboard.name, resource(@whiteboard) %>
+</div>
+
 <%= partial :snapshot, :with => @snapshot %>
+
+<% if user_owns_whiteboard? then %>
+  <div>
+  <%= link_to 'Edit', resource(@whiteboard, @snapshot, :edit) %>
+  <%= delete_button resource(@whiteboard, @snapshot), "Delete this snapshot" %>
+  </div>
+<% end %>
